# facex

./: .gitignore  Dockerfile  Makefile  README.md  download_weights.sh
deploy/: build_release.sh  publish_release.sh
docker/: server.py
docs/demo/: detect.wasm  facex-sdk.js  facex.js  facex.wasm  index.html
include/: wasm_compat.h  weight_crypto.h
python/: README.md  pyproject.toml
python/facex/: __init__.py  core.py
src/: align.cc  detect.c  detect.cc  edgeface_engine.c  edgeface_engine.cc  facex.cc  gemm_int8_4x8c8.cc  gemm_stub.c  gemm_stub.cc  threadpool.cc  threadpool_stub.cc  threadpool_wasm.cc  transformer_ops.c  transformer_ops.cc  weight_crypto.cc
tests/: golden_test.c
wasm/: bench.js  demo.html  detect.js  facex-sdk.js  facex.js  facex.wasm  index.d.ts  index.html  index.js  package.json
