[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "facex"
version = "0.1.0"
description = "Python binding for FaceX face detection + recognition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "Baurzhan Atinov"}]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
image = ["Pillow>=8.0"]
dev = ["pytest>=7.0", "Pillow>=8.0"]

[tool.setuptools.packages.find]
include = ["facex*"]
